--- a/website/app/application/core/projects/project/home/directives/home-files.html
+++ b/website/app/application/core/projects/project/home/directives/home-files.html
@@ -6,8 +6,8 @@
             <span style="color: #9F88C1; font-size: 20px;padding-left: 15px;">FILES</span>
         </div>
         <div class="panel-body home-panel-body no-max-height">
-            <div style="padding: 20px;width: 100%; height: 100%;"
-                 angular-grid="files.gridOptions"
+            <div stylex="padding: 20px;width: 100%; height: 100%;"
+                 ag-grid="files.gridOptions"
                  class="ag-file-browser">
             </div>
         </div>
