--- a/website/app/application/core/projects/project/modal/process-modal.html
+++ b/website/app/application/core/projects/project/modal/process-modal.html
@@ -8,7 +8,7 @@
         <div class="panel-body"
              ng-class="{'no-max-height': isExpanded()}">
             <div ng-if="project.processes.length!== 0" style="width: 100%;height:100%"
-                 angular-grid="gridOptions"
+                 ag-grid="gridOptions"
                  class="ag-fresh ag-basic">
             </div>
             <div ng-if="project.processes.length === 0">
