--- a/website/app/application/core/projects/project/home/directives/home-reviews.html
+++ b/website/app/application/core/projects/project/home/directives/home-reviews.html
@@ -7,7 +7,7 @@
         </div>
         <div class="panel-body home-panel-body">
             <div ng-if="view.project.reviews.length!== 0" style="width: 100%;height:100%"
-                 angular-grid="view.gridOptions"
+                 ag-grid="view.gridOptions"
                  class="ag-fresh ag-basic">
             </div>
             <div ng-if="view.project.reviews.length === 0">
