--- a/website/app/application/core/projects/project/processes/view.html
+++ b/website/app/application/core/projects/project/processes/view.html
@@ -70,7 +70,6 @@
                                             more-or-less normal distribution of letters, as opposed to using 'Content
                                             here,
                                             content here', making it look like readable English. </p>
-
                                         <p>
                                             <img class="img-thumbnail" height="100" width="100"
                                                  src="assets/img/img1.jpg">
@@ -78,6 +77,7 @@
                                                  src="assets/img/img2.jpg">
                                             <img class="img-thumbnail" height="100" width="100"
                                                  src="assets/img/img3.jpg">
+                                            ... <a>more</a> (10) files
                                         </p>
                                     </div>
                                 </td>
@@ -125,6 +125,7 @@
                                                  src="assets/img/img2.jpg">
                                             <img class="img-thumbnail" height="100" width="100"
                                                  src="assets/img/img3.jpg">
+                                            ... <a>more</a> (10) files
                                         </p>
                                     </div>
                                 </td>
