process-sample-layout

--- a/website/app/application/core/projects/project/processes/view.html
+++ b/website/app/application/core/projects/project/processes/view.html
@@ -70,6 +70,7 @@
                                             more-or-less normal distribution of letters, as opposed to using 'Content
                                             here,
                                             content here', making it look like readable English. </p>
+
                                         <p>
                                             <img class="img-thumbnail" height="100" width="100"
                                                  src="assets/img/img1.jpg">
@@ -84,7 +85,21 @@
                                 <td style="width: 50%">
                                     <ul style="list-style-type: circle;">
                                         <li ng-repeat="property in sample.properties">
-                                            {{property.name}} : {{property.best_measure[0].value}} {{property.best_measure[0].unit}}</li>
+                                            <div ng-switch="property.best_measure[0]._type">
+                                                <div ng-switch-when="histogram">
+                                                    {{property.name}} :
+                                                    <a ng-click="viewChart(property)"><i class="fa fa-fw fa-bar-chart"></i></a>
+                                                </div>
+                                                <div ng-switch-when="line">
+                                                    {{property.name}} :
+                                                    <a ng-click="viewChart(property)"><i class="fa fa-fw fa-bar-chart"></i></a>
+                                                </div>
+                                                <div ng-switch-default>
+                                                    {{property.name}} : {{property.best_measure[0].value}}
+                                                    {{property.best_measure[0].unit}}
+                                                </div>
+                                            </div>
+                                        </li>
                                     </ul>
                                 </td>
                             </tr>
